# web-transport

./: CLAUDE.md  Cargo.toml  README.md  justfile  package.json  release-plz.toml
.github/scripts/: release.sh
.github/workflows/: pr.yml  release-js.yml  release-kt.yml  release-py.yml  release-rs.yml  release-swift.yml
js/common/: release.ts
js/qmux/: README.md  package.json
js/qmux/examples/: client.ts
js/qmux/src/: credit.ts  frame.test.ts  frame.ts  index.ts  recv.test.ts  recv.ts  scheduler.test.ts  scheduler.ts  session.test.ts  session.ts  wire-format.test.ts
js/web-demo/: TESTING.md  client.js  test.html  test.js
js/web-demo/firefox-bug/: README.md  root-cause.md
js/web-socket-stream/: README.md  package.json  tsconfig.json
js/web-socket-stream/src/: index.test.ts  index.ts
js/web-transport/: README.md  napi.d.ts  package.json
js/web-transport/npm/darwin-arm64/: package.json
js/web-transport/npm/darwin-x64/: package.json
js/web-transport/npm/linux-arm64-gnu/: package.json
js/web-transport/npm/linux-x64-gnu/: package.json
js/web-transport/npm/win32-x64-msvc/: package.json
js/web-transport/src/: session.ts
kt/: .gitignore  README.md  build.gradle.kts  gradle.properties  justfile  settings.gradle.kts
kt/scripts/: check.sh  package.sh
kt/web-transport/: build.gradle.kts
kt/web-transport/src/commonMain/kotlin/dev/moq/webtransport/: WebTransport.kt
py/web-transport/: .gitignore  README.md  pyproject.toml
py/web-transport/python/web_transport/: __init__.py  _errors.py
py/web-transport/tests/browser_interop/: test_stream_edge_cases.py
rs/qmux/: CHANGELOG.md  Cargo.toml  README.md
rs/qmux/examples/: h3qx.rs
rs/qmux/src/: alpn.rs  config.rs  error.rs  lib.rs  session.rs  tcp.rs  tls.rs  transport.rs  uds.rs  ws.rs
rs/qmux/src/proto/: frame.rs  mod.rs  params.rs  version.rs
rs/qmux/tests/: backpressure.rs  negotiation.rs  priority.rs  qmux01.rs  wire_format.rs
rs/web-transport/: CHANGELOG.md  Cargo.toml
rs/web-transport-ffi/: Cargo.toml  README.md  build.sh
rs/web-transport-ffi/src/: client.rs  error.rs  ffi.rs  lib.rs  recv_stream.rs  send_stream.rs  server.rs  session.rs  test.rs
rs/web-transport-iroh/: CHANGELOG.md  Cargo.toml
rs/web-transport-iroh/src/: recv.rs  send.rs  session.rs
rs/web-transport-node/: CHANGELOG.md  Cargo.toml
rs/web-transport-node/src/: lib.rs
rs/web-transport-noq/: CHANGELOG.md  Cargo.toml
rs/web-transport-noq/src/: client.rs  recv.rs  send.rs  server.rs
rs/web-transport-proto/: Cargo.toml
rs/web-transport-quiche/: CHANGELOG.md  Cargo.toml
rs/web-transport-quiche/src/: client.rs  connection.rs
rs/web-transport-quiche/src/ez/: client.rs  connection.rs  driver.rs  recv.rs  send.rs  tls.rs
rs/web-transport-quiche/tests/: datagram.rs  reset.rs  verify.rs
rs/web-transport-quinn/: Cargo.toml
rs/web-transport-quinn/examples/: test-server.rs
rs/web-transport-quinn/src/: client.rs  session.rs
rs/web-transport-trait/: CHANGELOG.md  Cargo.toml  README.md
rs/web-transport-wasm/: CHANGELOG.md  Cargo.toml
rs/web-transport-wasm/src/: client.rs
rs/web-transport/src/: quinn.rs  wasm.rs
swift/: .gitignore  Package.swift  README.md  justfile
swift/Sources/WebTransport/: WebTransport.swift
swift/Tests/WebTransportTests/: WebTransportTests.swift
swift/scripts/: check.sh  package.sh
