[workspace]
members = [
    "rs/qmux",
    "rs/web-transport",
    "rs/web-transport-ffi",
    "rs/web-transport-iroh",
    "rs/web-transport-node",
    "rs/web-transport-noq",
    "rs/web-transport-proto",
    "rs/web-transport-quiche",
    "rs/web-transport-quinn",
    "rs/web-transport-trait",
    "rs/web-transport-wasm",
]
resolver = "2"

[workspace.dependencies]
web-transport-proto = { path = "rs/web-transport-proto", version = "0.6" }
web-transport-quinn = { path = "rs/web-transport-quinn", version = "0.11", default-features = false }
web-transport-trait = { path = "rs/web-transport-trait", version = "0.3" }

