[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "web-transport"
version = "0.1.1"
description = "Python bindings for web-transport-quinn"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT OR Apache-2.0" }
authors = [{ name = "ai-and-i", email = "ai.and.i.project@gmail.com" }]
keywords = ["webtransport", "quic", "asyncio", "networking"]
dependencies = ["cryptography>=43.0"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Topic :: Internet",
    "Topic :: System :: Networking",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/moq-dev/web-transport"
Repository = "https://github.com/moq-dev/web-transport"
Issues = "https://github.com/moq-dev/web-transport/issues"

[tool.maturin]
manifest-path = "../../rs/web-transport-python/Cargo.toml"
python-source = "python"
module-name = "web_transport._web_transport"
features = ["extension-module"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[dependency-groups]
dev = [
    "maturin>=1.0,<2.0",
    "playwright>=1.40",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "ty>=0.0.1a1",
]
