[package]
name = "web-transport-node"
description = "WebTransport NAPI-RS bindings for Node.js"
authors = ["Luke Curley"]
repository = "https://github.com/moq-dev/web-transport"
license = "MIT OR Apache-2.0"
version = "0.0.3"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
bytes = "1"
http = "1"
napi = { version = "3", features = ["async", "napi8"] }
napi-derive = "3"
rustls-pemfile = "2"
tokio = { version = "1", features = ["sync"] }
url = "2"
web-transport-quinn = { path = "../web-transport-quinn", version = "0.11" }

[build-dependencies]
napi-build = "2"
