[package]
name = "web-transport-noq"
description = "WebTransport library for Noq (a Quinn fork)"
authors = ["Luke Curley"]
repository = "https://github.com/moq-dev/web-transport"
license = "MIT OR Apache-2.0"

version = "0.2.0"
edition = "2021"

keywords = ["quic", "http3", "webtransport"]
categories = ["network-programming", "web-programming"]

[package.metadata.docs.rs]
all-features = true

[features]
default = ["aws-lc-rs"]
aws-lc-rs = ["noq/aws-lc-rs", "rustls/aws-lc-rs"]
ring = ["noq/ring", "rustls/ring"]

[dependencies]
bytes = "1"
futures = "0.3"
http = "1"
noq = { version = "1", default-features = false, features = [
    "tracing-log",
    "platform-verifier",
    "runtime-tokio",
    "rustls",
    "bloom",
] }
rustls = { version = "0.23", default-features = false, features = [
    "logging",
    "std",
] }
rustls-native-certs = "0.8"
thiserror = "2"
tokio = { version = "1", default-features = false, features = [
    "io-util",
    "macros",
    "time",
] }
tracing = "0.1"
url = "2"
web-transport-proto = { workspace = true }
web-transport-trait = { workspace = true }

[dev-dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
rustls-pemfile = "2"
tokio = { version = "1", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
