[package]
name = "web-transport-proto"
description = "WebTransport core protocol"
authors = ["Luke Curley"]
repository = "https://github.com/moq-dev/web-transport"
license = "MIT OR Apache-2.0"

version = "0.6.0"
edition = "2021"

keywords = ["quic", "http3", "webtransport"]
categories = ["network-programming", "web-programming"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1"
http = "1"
sfv = "0.15"
thiserror = "2"

# Just for AsyncRead and AsyncWrite traits
tokio = { version = "1", default-features = false, features = ["io-util"] }
url = "2"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt", "io-util"] }
