[package]
name = "web-transport-quiche"
description = "WebTransport library for Quiche"
authors = ["Luke Curley"]
repository = "https://github.com/moq-dev/web-transport"
license = "MIT OR Apache-2.0"

version = "0.4.2"
edition = "2021"

keywords = ["quic", "http3", "webtransport"]
categories = ["network-programming", "web-programming"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
boring = "4"
bytes = "1"
flume = "0.12"
futures = "0.3"
http = "1"
rustls-pki-types = "1"

thiserror = "2"

tokio = { version = "1", default-features = false, features = [
    "io-util",
    "macros",
    "sync",
    "time",
] }

tokio-quiche = "0.19"
tracing = "0.1"
web-transport-proto = { workspace = true }
web-transport-trait = { workspace = true }

[dev-dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
rcgen = "0.13"
rustls-pemfile = "2"
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"
